1. add core-ng api client classpath 2. use snapshot version 3. add regenerate and approve button